--- a/style.css
+++ b/style.css
@@ -351,6 +351,8 @@ width: 100%; */
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  gap: 4.8rem;
 }
 
 .site-img {
@@ -359,5 +361,170 @@ width: 100%; */
   justify-content: center;
 }
 
-.site-description-box:nth-child(2) {
+.site-description {
+  font-size: 2rem;
+
+  padding: 0 2rem;
+}
+
+/* --------------------------------------------------- */
+/* Testimonial Section */
+/* --------------------------------------------------- */
+
+.section-testimonials {
+  background-color: #000;
+  margin-top: 9.6rem;
+}
+
+.testimonial-client {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  margin-bottom: 6rem;
+}
+.testimonial-author {
+  font-size: 3.6rem;
+  color: #00a088;
+}
+
+.testimonial-img {
+  border-radius: 50%;
+  background-color: #fff;
+}
+.testimonial-company {
+  font-size: 3.6rem;
+  color: #fff;
+}
+
+.carousel {
+  margin: 0 auto;
+  padding: 32px;
+  color: #fff;
+
+  position: relative;
+}
+
+.testimonial {
+  width: 100%;
+  height: 100%;
+
+  overflow: hidden;
+}
+.testimonial-text {
+  font-size: 2.4rem;
+  font-weight: 500;
+  padding: 0 15%;
+}
+
+/* slide functionality */
+
+.slide-row {
+  display: flex;
+  width: 300vw;
+
+  transition: 0.5s;
+}
+
+.slide-col {
+  width: 100vw;
+  position: relative;
+}
+
+.indicator {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 2px;
+}
+
+.carousel-btn {
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  margin: 4px;
+  border-radius: 15px;
+  background: #fff;
+  cursor: pointer;
+}
+
+.active {
+  width: 4.5rem;
+  background-color: #1a4f47;
+}
+/* carousel buttons */
+
+.btn {
+  background-color: #000;
+  border: none;
+  height: 50px;
+  width: 40px;
+  cursor: pointer;
+
+  position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn--left {
+  left: 0;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
+.btn--right {
+  right: 0;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btn-icon {
+  height: 5rem;
+  width: 5rem;
+  stroke: #fff;
+}
+
+/* --------------------------------------------------- */
+/* about Section */
+/* --------------------------------------------------- */
+
+.section-about {
+  display: flex;
+}
+
+.about {
+  align-items: center;
+  justify-content: center;
+  padding: 9.6rem;
+}
+
+.about-heading {
+  text-align: center;
+  color: #00a088;
+  font-size: 3.6rem;
+  margin-bottom: 3.6rem;
+}
+
+.about-text {
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+
+  margin-bottom: 3.6rem;
+}
+
+.quote {
+  font-size: 2rem;
+}
+
+.quote-author {
+  font-size: 1.5rem;
+  color: #696969;
+}
+/* 
+.about-img-box {
+} */
+
+.about-img {
+  box-shadow: 3rem 3rem 0, #000;
 }
