--- a/style.css
+++ b/style.css
@@ -367,6 +367,20 @@ width: 100%; */
   padding: 0 2rem;
 }
 
+.github-btn {
+  font-size: 2.4rem;
+  color: #fff;
+  background-color: #1a4f47;
+  border-radius: 9px;
+  text-decoration: none;
+  padding: 2rem 4rem;
+}
+
+.github-btn-box {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
 /* --------------------------------------------------- */
 /* Testimonial Section */
 /* --------------------------------------------------- */
@@ -446,6 +460,7 @@ width: 100%; */
   border-radius: 15px;
   background: #fff;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .active {
@@ -521,10 +536,42 @@ width: 100%; */
   font-size: 1.5rem;
   color: #696969;
 }
-/* 
+
 .about-img-box {
-} */
+  width: 50rem;
+  height: 60rem;
+  margin: 5rem;
+}
 
 .about-img {
-  box-shadow: 3rem 3rem 0, #000;
+  box-shadow: 3rem 3rem 0 #1a4f47;
+}
+
+/* --------------------------------------------------- */
+/* Footer Section */
+/* --------------------------------------------------- */
+
+.footer {
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* {
+  display: inline-block;
+  align-self: center;
+} */
+
+.footer-logo,
+.footer-nav-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  margin-bottom: 3rem;
+}
+
+.footer-nav-list {
+  list-style: none;
 }
