--- a/style.css
+++ b/style.css
@@ -271,9 +271,12 @@ body {
 }
 
 .services-box {
-  margin: 0 auto;
+  margin-top: 4.8rem;
 }
 
+.services-box h2 {
+  margin-top: 4.8rem;
+}
 /* background: url(1px.png) repeat-y;
 background-size: 50% auto;
 width: 100%; */
@@ -281,6 +284,7 @@ width: 100%; */
 .services-heading {
   color: #fff;
   text-align: center;
+  align-items: center;
   font-size: 4.8rem;
   font-weight: 400;
 
@@ -600,4 +604,9 @@ width: 100%; */
 
 .footer-nav-list {
   list-style: none;
+}
+
+.footer-nav-link {
+  margin: 0 auto;
+  justify-content: center;
 }
