--- a/queries.css
+++ b/queries.css
@@ -180,4 +180,59 @@ instead, 1rem = 1em = 16px
   .site-description-box {
     padding: 3.2rem 0;
   }
+
+  /* Mobile Navigation */
+
+  .btn-mobile-nav {
+    display: block;
+    z-index: 9999;
+  }
+
+  .main-nav {
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+
+    opacity: 0;
+
+    pointer-events: none;
+
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+
+    pointer-events: auto;
+
+    visibility: visible;
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+    color: #333;
+  }
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+
+    gap: 6rem;
+  }
+
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    color: #333;
+    font-size: 3.2rem;
+  }
 }
