--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ body {
 }
 
 .hero-btn-box {
-  margin-top: 9.6rem;
+  margin-top: 3.2rem;
   display: flex;
   gap: 2.4rem;
 }
@@ -285,7 +285,7 @@ body {
 .section-services {
   background-image: linear-gradient(to bottom, #1a4f47 50%, #fff 50%);
   width: 100vw;
-  height: auto;
+  /* height: 100vh; */
 
   margin-bottom: 9.6rem;
 }
@@ -308,11 +308,14 @@ width: 100%; */
   font-size: 4.8rem;
   font-weight: 400;
 
+  padding: 2rem;
   margin-bottom: 4.8rem;
 }
 
 .services-grid {
   justify-content: center;
+  margin-bottom: 9.6rem;
+  margin: 0 auto;
 }
 
 .services-items {
@@ -334,7 +337,7 @@ width: 100%; */
 .services-items h3 {
   font-size: 4.8rem;
   text-align: center;
-  color: #1a4f47;
+  color: #00a088;
   margin-bottom: 2.4rem;
 }
 
@@ -358,6 +361,19 @@ width: 100%; */
   font-size: 4.8rem;
   display: block;
   margin-bottom: 3.2rem;
+}
+
+.services-other {
+  text-align: center;
+  font-size: 4.8rem;
+  color: #fff;
+  margin-bottom: 6rem;
+}
+
+.services-more {
+  color: #000;
+  margin-bottom: 3.2rem;
+  margin-top: 3.2rem;
 }
 
 .services-contact-box {
@@ -656,7 +672,7 @@ width: 100%; */
 /* --------------------------------------------------- */
 
 .contact-section {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #00a088;
 
@@ -667,19 +683,21 @@ width: 100%; */
 }
 
 .contact-container {
-  width: 90%;
-  max-width: 500px;
+  width: 50%;
+  max-width: 50rem;
   margin: 0 auto;
-  padding: 20px;
-  box-shadow: 0px 0px 20px #00000010;
+  padding: 2rem;
+  box-shadow: 0px 0px 2rem #00000010;
   background-color: #fff;
   border-radius: 9px;
-  margin-bottom: 20px;
+  margin-bottom: 2rem;
+
+  margin-top: 3.2rem;
 }
 
 .form-group {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 2rem;
   font-size: 2rem;
 }
 
@@ -687,7 +705,7 @@ width: 100%; */
 .form-group textarea {
   width: 100%;
   padding: 0.5rem;
-  font-size: 1.8rem;
+  font-size: 1.2rem;
 
   border: 1px solid #696969;
   margin-top: 0.5rem;
@@ -701,7 +719,7 @@ textarea {
   width: 100%;
   border: none;
   outline: none;
-  padding: 2rem;
+  padding: 1.5rem;
   font-size: 2.4rem;
   border-radius: 9px;
   font-family: "Poppins", sans-serif;
