--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body {
 .section-hero {
   max-width: 100%;
   height: 100vh;
-  background-image: url(/img/hero.jpg);
+  background-image: url(/img/hero.webp);
   background-size: cover;
   margin-bottom: 3.2rem;
 }
@@ -485,7 +485,7 @@ width: 100%; */
 }
 
 .testimonial-img {
-  border-radius: 50%;
+  border-radius: 999px;
   background-color: #fff;
 }
 .testimonial-company {
